# netkit

./: .gitignore  CMakeLists.txt  Doxyfile
include/: NetKit.hpp  http.hpp
include/NetKit/: HTTP.hpp  IO.hpp
include/NetKit/HTTP/: Client.hpp  Cookie.hpp  CookieJar.hpp  Request.hpp  Response.hpp
include/NetKit/IO/: Buffer.hpp  Connection.hpp  ConnectionManager.hpp  Socket.hpp  SocketAddress.hpp  TCPSocket.hpp
include/NetKit/TCP/: Socket.hpp
include/http/: client.hpp  request.hpp  response.hpp
include/netkit/: http.hpp
include/netkit/http/: client.hpp  cookie.hpp  cookiejar.hpp  request.hpp  response.hpp
modules/: FindLibEvent.cmake
src/: client.cpp  request.cpp  response.cpp  test.cpp
src/HTTP/: Client.cpp  Cookie.cpp  CookieJar.cpp  Request.cpp  Response.cpp
src/IO/: Buffer.cpp  ConnectionManager.cpp  Socket.cpp  SocketAddress.cpp  TCPSocket.cpp
src/http/: client.cpp  request.cpp
