PROJECT(NetKit)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/modules")

IF(CMAKE_COMPILER_IS_GNUCXX)
	SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=gnu++0x)
ENDIF(CMAKE_COMPILER_IS_GNUCXX)

SET(NETKIT_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include CACHE INTERNAL "NETKIT include directory")

SET(NETKIT_SOURCES
	src/HTTP/Client.cpp
	src/HTTP/Cookie.cpp
	src/HTTP/Request.cpp
	src/HTTP/Response.cpp
	src/HTTP/CookieJar.cpp
	src/IO/SocketAddress.cpp
	src/IO/TCPSocket.cpp
	src/IO/Socket.cpp
	src/IO/Buffer.cpp
	src/IO/ConnectionManager.cpp
)

FIND_PACKAGE(LibEvent)

INCLUDE_DIRECTORIES(include include/NetKit ${LIBEVENT_INCLUDE_DIRS})

ADD_LIBRARY(netkit SHARED ${NETKIT_SOURCES})
TARGET_LINK_LIBRARIES(netkit ${LIBEVENT_LIBRARIES})

ADD_EXECUTABLE(test src/test.cpp)
TARGET_LINK_LIBRARIES(test netkit)
